--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,13 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      window.addEventListener('load',()=> {
+        if("serviceWorker" in navigator)
+        {navigator.serviceWorker.register('/sw.js')}
+      })
+      
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
